--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.13",
     "gatsby-plugin-offline": "^3.2.12",
     "gatsby-plugin-react-helmet": "^3.3.5",
