--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-manifest": "^2.4.13",
     "gatsby-plugin-mdx": "^1.2.22",
     "gatsby-plugin-offline": "^3.2.12",
+    "gatsby-plugin-preload-fonts": "^1.2.21",
     "gatsby-plugin-react-helmet": "^3.3.5",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.13",
@@ -43,6 +44,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "preload-fonts": "gatsby-preload-fonts",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
