Setup forestry section

--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,6 +4,10 @@ auto_deploy: false
 admin_path: 
 webhook_url: 
 sections: 
+  - type: directory
+    label: Side Projects
+    path: src/projects
+    create: documents
 upload_dir: uploads
 public_path: "/uploads"
 front_matter_path: ''
